--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="image-container">
         <div class="fps-boost">
             <h1>Optmizer Franko For Optmiz PC</h1>
-            <a href="https://archive.org/download/Optmizer/Optmizer.bat" class="download-btn" download>Download</a>
+            <a href="https://archive.org/download/fps-boost/FPS%20BOOST.bat" class="download-btn" download>Download</a>
         </div>
             <h2>FPS 500+ Boost</h2>
         </div>
